--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -48,9 +48,9 @@
     "display(Markdown(\"#### Original training dataset\"))\n",
     "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_orig_train.mean_difference())\n",
     "\n",
-    "RW = Reweighing(unprivileged_groups=unprivileged_groups,\n",
+    "ALG = Algorithm(unprivileged_groups=unprivileged_groups,\n",
     "                privileged_groups=privileged_groups)\n",
-    "dataset_transf_train = RW.fit_transform(dataset_orig_train)\n",
+    "dataset_transf_train = ALG.fit_transform(dataset_orig_train)\n",
     "\n",
     "metric_transf_train = Metric(dataset_transf_train, \n",
     "                                               unprivileged_groups=unprivileged_groups,\n",
