--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -29,6 +29,38 @@
     "from IPython.display import Markdown, display\n",
     "time.sleep(20)\n",
     "\n",
+    "# Function to initialize the algorithm based on user input\n",
+    "def initialize_algorithm(Algorithm, unprivileged_groups, privileged_groups, sess):\n",
+    "    if Algorithm == \"Reweighing\":\n",
+    "        return Algorithm(unprivileged_groups=unprivileged_groups,\n",
+    "                          privileged_groups=privileged_groups)\n",
+    "    elif Algorithm == \"AdversarialDebiasing\":\n",
+    "        scope_name = \"my_scope\"\n",
+    "        adversary_loss_weight = 0.1\n",
+    "        num_epochs = 50\n",
+    "        batch_size = 128\n",
+    "        classifier_num_hidden_units = 200\n",
+    "        debias = True\n",
+    "        return Algorithm(unprivileged_groups=unprivileged_groups,\n",
+    "                                    privileged_groups=privileged_groups,\n",
+    "                                    scope_name=scope_name,\n",
+    "                                    sess=sess,\n",
+    "                                    seed=None,\n",
+    "                                    adversary_loss_weight=adversary_loss_weight,\n",
+    "                                    num_epochs=num_epochs,\n",
+    "                                    batch_size=batch_size,\n",
+    "                                    classifier_num_hidden_units=classifier_num_hidden_units,\n",
+    "                                    debias=debias)\n",
+    "    else Algorithm == \"OptimPreproc\":\n",
+    "        optimizer = 'my_optimizer'\n",
+    "        optim_options = {'option1': 'value1', 'option2': 'value2'}\n",
+    "        return Algorithm(optimizer=optimizer,\n",
+    "                            optim_options=optim_options,\n",
+    "                            unprivileged_groups=unprivileged_groups,\n",
+    "                            privileged_groups=privileged_groups,\n",
+    "                            verbose=verbose,\n",
+    "                            seed=None)\n",
+    "\n",
     "dataset_orig = Dataset(\n",
     "    protected_attribute_names=['age'],           # this dataset also contains protected\n",
     "                                                 # attribute for \"sex\" which we do not\n",
@@ -42,19 +74,24 @@
     "privileged_groups = [{'age': 1}]\n",
     "unprivileged_groups = [{'age': 0}]\n",
     "\n",
+    "# Define metric\n",
     "metric_orig_train = Metric(dataset_orig_train, \n",
-    "                                             unprivileged_groups=unprivileged_groups,\n",
-    "                                             privileged_groups=privileged_groups)\n",
-    "display(Markdown(\"#### Original training dataset\"))\n",
-    "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_orig_train.mean_difference())\n",
+    "                           unprivileged_groups=unprivileged_groups,\n",
+    "                           privileged_groups=privileged_groups)\n",
     "\n",
-    "ALG = Algorithm(unprivileged_groups=unprivileged_groups,\n",
-    "                privileged_groups=privileged_groups)\n",
+    "# Initialize algorithm based on user input\n",
+    "algorithm_name = \"AdversarialDebiasing\"  # This placeholder will be replaced by the selected algorithm\n",
+    "ALG = initialize_algorithm(algorithm_name, unprivileged_groups, privileged_groups, None)\n",
+    "\n",
+    "# Fit and transform dataset\n",
     "dataset_transf_train = ALG.fit_transform(dataset_orig_train)\n",
     "\n",
+    "# Compute metric on transformed dataset\n",
     "metric_transf_train = Metric(dataset_transf_train, \n",
-    "                                               unprivileged_groups=unprivileged_groups,\n",
-    "                                               privileged_groups=privileged_groups)\n",
+    "                             unprivileged_groups=unprivileged_groups,\n",
+    "                             privileged_groups=privileged_groups)\n",
+    "\n",
+    "# Display results\n",
     "display(Markdown(\"#### Transformed training dataset\"))\n",
     "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_transf_train.mean_difference())"
    ]
