fix: syntax issue
syntax issue in the initialize_algorithm function

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -30,18 +30,18 @@
     "time.sleep(20)\n",
     "\n",
     "# Function to initialize the algorithm based on user input\n",
-    "def initialize_algorithm(Algorithm, unprivileged_groups, privileged_groups, sess):\n",
-    "    if Algorithm == \"Reweighing\":\n",
-    "        return Algorithm(unprivileged_groups=unprivileged_groups,\n",
+    "def initialize_algorithm(algorithm_name, unprivileged_groups, privileged_groups, sess):\n",
+    "    if algorithm_name == \"Reweighing\":\n",
+    "        return Reweighing(unprivileged_groups=unprivileged_groups,\n",
     "                          privileged_groups=privileged_groups)\n",
-    "    elif Algorithm == \"AdversarialDebiasing\":\n",
+    "    elif algorithm_name == \"AdversarialDebiasing\":\n",
     "        scope_name = \"my_scope\"\n",
     "        adversary_loss_weight = 0.1\n",
     "        num_epochs = 50\n",
     "        batch_size = 128\n",
     "        classifier_num_hidden_units = 200\n",
     "        debias = True\n",
-    "        return Algorithm(unprivileged_groups=unprivileged_groups,\n",
+    "        return AdversarialDebiasing(unprivileged_groups=unprivileged_groups,\n",
     "                                    privileged_groups=privileged_groups,\n",
     "                                    scope_name=scope_name,\n",
     "                                    sess=sess,\n",
@@ -51,15 +51,18 @@
     "                                    batch_size=batch_size,\n",
     "                                    classifier_num_hidden_units=classifier_num_hidden_units,\n",
     "                                    debias=debias)\n",
-    "    else Algorithm == \"OptimPreproc\":\n",
+    "    elif algorithm_name == \"OptimPreproc\":\n",
     "        optimizer = 'my_optimizer'\n",
     "        optim_options = {'option1': 'value1', 'option2': 'value2'}\n",
-    "        return Algorithm(optimizer=optimizer,\n",
+    "        verbose = False\n",
+    "        return OptimPreproc(optimizer=optimizer,\n",
     "                            optim_options=optim_options,\n",
     "                            unprivileged_groups=unprivileged_groups,\n",
     "                            privileged_groups=privileged_groups,\n",
     "                            verbose=verbose,\n",
     "                            seed=None)\n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid algorithm name. Supported values: 'Reweighing', 'AdversarialDebiasing', 'OptimPreproc'\")\n",
     "\n",
     "dataset_orig = Dataset(\n",
     "    protected_attribute_names=['age'],           # this dataset also contains protected\n",
