--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -83,7 +83,7 @@
     "                           privileged_groups=privileged_groups)\n",
     "\n",
     "# Initialize algorithm based on user input\n",
-    "algorithm_name = \"AdversarialDebiasing\"  # This placeholder will be replaced by the selected algorithm\n",
+    "algorithm_name = Algorithm  # This placeholder will be replaced by the selected algorithm\n",
     "ALG = initialize_algorithm(algorithm_name, unprivileged_groups, privileged_groups, None)\n",
     "\n",
     "# Fit and transform dataset\n",
