--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -30,18 +30,18 @@
     "time.sleep(20)\n",
     "\n",
     "# Function to initialize the algorithm based on user input\n",
-    "def initialize_algorithm(algorithm_name, unprivileged_groups, privileged_groups, sess):\n",
-    "    if algorithm_name == \"Reweighing\":\n",
-    "        return Reweighing(unprivileged_groups=unprivileged_groups,\n",
+    "def initialize_algorithm(Algorithm, unprivileged_groups, privileged_groups, sess):\n",
+    "    if Algorithm == \"Reweighing\":\n",
+    "        return Algorithm(unprivileged_groups=unprivileged_groups,\n",
     "                          privileged_groups=privileged_groups)\n",
-    "    elif algorithm_name == \"AdversarialDebiasing\":\n",
+    "    elif Algorithm == \"AdversarialDebiasing\":\n",
     "        scope_name = \"my_scope\"\n",
     "        adversary_loss_weight = 0.1\n",
     "        num_epochs = 50\n",
     "        batch_size = 128\n",
     "        classifier_num_hidden_units = 200\n",
     "        debias = True\n",
-    "        return AdversarialDebiasing(unprivileged_groups=unprivileged_groups,\n",
+    "        return Algorithm(unprivileged_groups=unprivileged_groups,\n",
     "                                    privileged_groups=privileged_groups,\n",
     "                                    scope_name=scope_name,\n",
     "                                    sess=sess,\n",
@@ -51,7 +51,7 @@
     "                                    batch_size=batch_size,\n",
     "                                    classifier_num_hidden_units=classifier_num_hidden_units,\n",
     "                                    debias=debias)\n",
-    "    elif algorithm_name == \"OptimPreproc\":\n",
+    "    elif Algorithm == \"OptimPreproc\":\n",
     "        optimizer = 'my_optimizer'\n",
     "        optim_options = {'option1': 'value1', 'option2': 'value2'}\n",
     "        verbose = False\n",
@@ -83,8 +83,7 @@
     "                           privileged_groups=privileged_groups)\n",
     "\n",
     "# Initialize algorithm based on user input\n",
-    "algorithm_name = Algorithm  # This placeholder will be replaced by the selected algorithm\n",
-    "ALG = initialize_algorithm(algorithm_name, unprivileged_groups, privileged_groups, None)\n",
+    "ALG = initialize_algorithm(Algorithm, unprivileged_groups, privileged_groups, None)\n",
     "\n",
     "# Fit and transform dataset\n",
     "dataset_transf_train = ALG.fit_transform(dataset_orig_train)\n",
