--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -83,7 +83,7 @@
     "                           privileged_groups=privileged_groups)\n",
     "\n",
     "# Initialize algorithm based on user input\n",
-    "ALG = initialize_algorithm(Algorithm, unprivileged_groups, privileged_groups, None)\n",
+    "ALG = Algorithm(Algorithm, unprivileged_groups, privileged_groups, None)\n",
     "\n",
     "# Fit and transform dataset\n",
     "dataset_transf_train = ALG.fit_transform(dataset_orig_train)\n",
