fix: algorithm detection error

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -30,50 +30,53 @@
     "time.sleep(20)\n",
     "\n",
     "# Function to initialize the algorithm based on user input\n",
-    "def initialize_algorithm(Algorithm, unprivileged_groups, privileged_groups, sess):\n",
+    "def initialize_algorithm(unprivileged_groups, privileged_groups, **kwargs):\n",
     "    if Algorithm == \"Reweighing\":\n",
-    "        return Algorithm(unprivileged_groups=unprivileged_groups,\n",
+    "        return Reweighing(unprivileged_groups=unprivileged_groups,\n",
     "                          privileged_groups=privileged_groups)\n",
     "    elif Algorithm == \"AdversarialDebiasing\":\n",
+    "        if \"sess\" not in kwargs:\n",
+    "            raise ValueError(\"TensorFlow session 'sess' is required for AdversarialDebiasing.\")\n",
     "        scope_name = \"my_scope\"\n",
-    "        adversary_loss_weight = 0.1\n",
-    "        num_epochs = 50\n",
-    "        batch_size = 128\n",
-    "        classifier_num_hidden_units = 200\n",
-    "        debias = True\n",
-    "        return Algorithm(unprivileged_groups=unprivileged_groups,\n",
+    "        adversary_loss_weight = kwargs.get(\"adversary_loss_weight\", 0.1)\n",
+    "        num_epochs = kwargs.get(\"num_epochs\", 50)\n",
+    "        batch_size = kwargs.get(\"batch_size\", 128)\n",
+    "        classifier_num_hidden_units = kwargs.get(\"classifier_num_hidden_units\", 200)\n",
+    "        debias = kwargs.get(\"debias\", True)\n",
+    "        return AdversarialDebiasing(unprivileged_groups=unprivileged_groups,\n",
     "                                    privileged_groups=privileged_groups,\n",
     "                                    scope_name=scope_name,\n",
-    "                                    sess=sess,\n",
-    "                                    seed=None,\n",
+    "                                    sess=kwargs[\"sess\"],\n",
+    "                                    seed=kwargs.get(\"seed\"),\n",
     "                                    adversary_loss_weight=adversary_loss_weight,\n",
     "                                    num_epochs=num_epochs,\n",
     "                                    batch_size=batch_size,\n",
     "                                    classifier_num_hidden_units=classifier_num_hidden_units,\n",
     "                                    debias=debias)\n",
     "    elif Algorithm == \"OptimPreproc\":\n",
-    "        optimizer = 'my_optimizer'\n",
-    "        optim_options = {'option1': 'value1', 'option2': 'value2'}\n",
-    "        verbose = False\n",
+    "        optimizer = kwargs.get(\"optimizer\", 'my_optimizer')\n",
+    "        optim_options = kwargs.get(\"optim_options\", {'option1': 'value1', 'option2': 'value2'})\n",
+    "        verbose = kwargs.get(\"verbose\", False)\n",
     "        return OptimPreproc(optimizer=optimizer,\n",
     "                            optim_options=optim_options,\n",
     "                            unprivileged_groups=unprivileged_groups,\n",
     "                            privileged_groups=privileged_groups,\n",
     "                            verbose=verbose,\n",
-    "                            seed=None)\n",
+    "                            seed=kwargs.get(\"seed\"))\n",
     "    else:\n",
     "        raise ValueError(\"Invalid algorithm name. Supported values: 'Reweighing', 'AdversarialDebiasing', 'OptimPreproc'\")\n",
     "\n",
+    "# Load dataset\n",
     "dataset_orig = Dataset(\n",
-    "    protected_attribute_names=['age'],           # this dataset also contains protected\n",
-    "                                                 # attribute for \"sex\" which we do not\n",
-    "                                                 # consider in this evaluation\n",
-    "    privileged_classes=[lambda x: x >= 25],      # age >=25 is considered privileged\n",
-    "    features_to_drop=['personal_status', 'sex'] # ignore sex-related attributes\n",
+    "    protected_attribute_names=['age'],\n",
+    "    privileged_classes=[lambda x: x >= 25],\n",
+    "    features_to_drop=['personal_status', 'sex']\n",
     ")\n",
     "\n",
+    "# Split dataset\n",
     "dataset_orig_train, dataset_orig_test = dataset_orig.split([0.7], shuffle=True)\n",
     "\n",
+    "# Define privileged and unprivileged groups\n",
     "privileged_groups = [{'age': 1}]\n",
     "unprivileged_groups = [{'age': 0}]\n",
     "\n",
@@ -83,7 +86,7 @@
     "                           privileged_groups=privileged_groups)\n",
     "\n",
     "# Initialize algorithm based on user input\n",
-    "ALG = Algorithm(Algorithm, unprivileged_groups, privileged_groups, None)\n",
+    "ALG = initialize_algorithm(unprivileged_groups, privileged_groups)\n",
     "\n",
     "# Fit and transform dataset\n",
     "dataset_transf_train = ALG.fit_transform(dataset_orig_train)\n",
