--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -29,40 +29,39 @@
     "from IPython.display import Markdown, display\n",
     "time.sleep(20)\n",
     "\n",
-    "# Function to initialize the algorithm based on user input\n",
-    "def initialize_algorithm(unprivileged_groups, privileged_groups, **kwargs):\n",
-    "    if Algorithm == \"Reweighing\":\n",
-    "        return Reweighing(unprivileged_groups=unprivileged_groups,\n",
-    "                          privileged_groups=privileged_groups)\n",
-    "    elif Algorithm == \"AdversarialDebiasing\":\n",
-    "        if \"sess\" not in kwargs:\n",
-    "            raise ValueError(\"TensorFlow session 'sess' is required for AdversarialDebiasing.\")\n",
-    "        scope_name = \"my_scope\"\n",
-    "        adversary_loss_weight = kwargs.get(\"adversary_loss_weight\", 0.1)\n",
-    "        num_epochs = kwargs.get(\"num_epochs\", 50)\n",
-    "        batch_size = kwargs.get(\"batch_size\", 128)\n",
-    "        classifier_num_hidden_units = kwargs.get(\"classifier_num_hidden_units\", 200)\n",
-    "        debias = kwargs.get(\"debias\", True)\n",
-    "        return AdversarialDebiasing(unprivileged_groups=unprivileged_groups,\n",
-    "                                    privileged_groups=privileged_groups,\n",
-    "                                    scope_name=scope_name,\n",
-    "                                    sess=kwargs[\"sess\"],\n",
-    "                                    seed=kwargs.get(\"seed\"),\n",
-    "                                    adversary_loss_weight=adversary_loss_weight,\n",
-    "                                    num_epochs=num_epochs,\n",
-    "                                    batch_size=batch_size,\n",
-    "                                    classifier_num_hidden_units=classifier_num_hidden_units,\n",
-    "                                    debias=debias)\n",
-    "    elif Algorithm == \"OptimPreproc\":\n",
-    "        optimizer = kwargs.get(\"optimizer\", 'my_optimizer')\n",
-    "        optim_options = kwargs.get(\"optim_options\", {'option1': 'value1', 'option2': 'value2'})\n",
-    "        verbose = kwargs.get(\"verbose\", False)\n",
-    "        return OptimPreproc(optimizer=optimizer,\n",
-    "                            optim_options=optim_options,\n",
-    "                            unprivileged_groups=unprivileged_groups,\n",
-    "                            privileged_groups=privileged_groups,\n",
-    "                            verbose=verbose,\n",
-    "                            seed=kwargs.get(\"seed\"))\n",
+    "# Function to initialize the Reweighing algorithm\n",
+    "def initialize_reweighing(unprivileged_groups, privileged_groups):\n",
+    "    return Reweighing(unprivileged_groups=unprivileged_groups,\n",
+    "                      privileged_groups=privileged_groups)\n",
+    "\n",
+    "# Function to initialize the AdversarialDebiasing algorithm\n",
+    "def initialize_adversarial_debiasing(unprivileged_groups, privileged_groups, adversary_loss_weight, num_epochs, batch_size, classifier_num_hidden_units, debias, sess):\n",
+    "    if sess is None:\n",
+    "        raise ValueError(\"TensorFlow session 'sess' is required for AdversarialDebiasing.\")\n",
+    "    scope_name = \"my_scope\"\n",
+    "    return AdversarialDebiasing(unprivileged_groups=unprivileged_groups,\n",
+    "                                privileged_groups=privileged_groups,\n",
+    "                                scope_name=scope_name,\n",
+    "                                sess=sess,\n",
+    "                                seed=None,\n",
+    "                                adversary_loss_weight=adversary_loss_weight,\n",
+    "                                num_epochs=num_epochs,\n",
+    "                                batch_size=batch_size,\n",
+    "                                classifier_num_hidden_units=classifier_num_hidden_units,\n",
+    "                                debias=debias)\n",
+    "\n",
+    "# Function to initialize the OptimPreproc algorithm\n",
+    "def initialize_optim_preproc(unprivileged_groups, privileged_groups, optimizer, optim_options, verbose):\n",
+    "    return OptimPreproc(optimizer=optimizer,\n",
+    "                        optim_options=optim_options,\n",
+    "                        unprivileged_groups=unprivileged_groups,\n",
+    "                        privileged_groups=privileged_groups,\n",
+    "                        verbose=verbose,\n",
+    "                        seed=None)\n",
+    "\n",
+    "# User-inputted algorithm\n",
+    "algorithm_name = Algorithm\n",
+    "\n",
     "# Load dataset\n",
     "dataset_orig = Dataset(\n",
     "    protected_attribute_names=['age'],\n",
@@ -82,8 +81,17 @@
     "                           unprivileged_groups=unprivileged_groups,\n",
     "                           privileged_groups=privileged_groups)\n",
     "\n",
-    "# Initialize algorithm based on user input\n",
-    "ALG = initialize_algorithm(unprivileged_groups, privileged_groups, **kwargs)\n",
+    "# Initialize algorithm based on user input \n",
+    "if algorithm_name == \"Reweighing\":\n",
+    "    ALG = initialize_reweighing(unprivileged_groups, privileged_groups)\n",
+    "elif algorithm_name == \"AdversarialDebiasing\":\n",
+    "    ALG = initialize_adversarial_debiasing(unprivileged_groups, privileged_groups, \n",
+    "                                           adversary_loss_weight=0.1, num_epochs=50, batch_size=128, \n",
+    "                                           classifier_num_hidden_units=200, debias=True, sess=None)\n",
+    "elif algorithm_name == \"OptimPreproc\":\n",
+    "    ALG = initialize_optim_preproc(unprivileged_groups, privileged_groups, \n",
+    "                                   optimizer='my_optimizer', optim_options={'option1': 'value1', 'option2': 'value2'}, \n",
+    "                                   verbose=False)\n",
     "\n",
     "# Fit and transform dataset\n",
     "dataset_transf_train = ALG.fit_transform(dataset_orig_train)\n",
@@ -95,7 +103,7 @@
     "\n",
     "# Display results\n",
     "display(Markdown(\"#### Transformed training dataset\"))\n",
-    "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_transf_train.mean_difference())"
+    "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_transf_train.mean_difference())\n"
    ]
   }
  ],
