fix: ALG values in ipynb file
 initializing ALG before the if statement

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -81,6 +81,9 @@
     "                           unprivileged_groups=unprivileged_groups,\n",
     "                           privileged_groups=privileged_groups)\n",
     "\n",
+    "# Initialize ALG as None initially\n",
+    "ALG = None\n",
+    "\n",
     "# Initialize algorithm based on user input \n",
     "if algorithm_name == \"Reweighing\":\n",
     "    ALG = initialize_reweighing(unprivileged_groups, privileged_groups)\n",
