fix: ALG values

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -95,6 +95,7 @@
     "    ALG = initialize_optim_preproc(unprivileged_groups, privileged_groups, \n",
     "                                   optimizer='my_optimizer', optim_options={'option1': 'value1', 'option2': 'value2'}, \n",
     "                                   verbose=False)\n",
+    "print(\"ALG:\", ALG)\n",
     "\n",
     "# Fit and transform dataset\n",
     "dataset_transf_train = ALG.fit_transform(dataset_orig_train)\n",
