fix:   ALG = initialize_reweighing(unprivileged_groups, privileged_groups)

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -59,9 +59,6 @@
     "                        verbose=verbose,\n",
     "                        seed=None)\n",
     "\n",
-    "# User-inputted algorithm\n",
-    "algorithm_name = Algorithm\n",
-    "\n",
     "# Load dataset\n",
     "dataset_orig = Dataset(\n",
     "    protected_attribute_names=['age'],\n",
@@ -85,17 +82,16 @@
     "ALG = None\n",
     "\n",
     "# Initialize algorithm based on user input \n",
-    "if algorithm_name == \"Reweighing\":\n",
+    "if Algorithm == \"Reweighing\":\n",
     "    ALG = initialize_reweighing(unprivileged_groups, privileged_groups)\n",
-    "elif algorithm_name == \"AdversarialDebiasing\":\n",
+    "elif Algorithm == \"AdversarialDebiasing\":\n",
     "    ALG = initialize_adversarial_debiasing(unprivileged_groups, privileged_groups, \n",
     "                                           adversary_loss_weight=0.1, num_epochs=50, batch_size=128, \n",
     "                                           classifier_num_hidden_units=200, debias=True, sess=None)\n",
-    "elif algorithm_name == \"OptimPreproc\":\n",
+    "elif Algorithm == \"OptimPreproc\":\n",
     "    ALG = initialize_optim_preproc(unprivileged_groups, privileged_groups, \n",
     "                                   optimizer='my_optimizer', optim_options={'option1': 'value1', 'option2': 'value2'}, \n",
     "                                   verbose=False)\n",
-    "print(\"ALG:\", ALG)\n",
     "\n",
     "# Fit and transform dataset\n",
     "dataset_transf_train = ALG.fit_transform(dataset_orig_train)\n",
