add: demo ipynb

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -23,7 +23,7 @@
     "time.sleep(20)\n",
     "from aif360.metrics import Metric\n",
     "time.sleep(20)\n",
-    "from aif360.algorithms.Path import Algorithm\n",
+    "from aif360.algorithms.preprocessing import Reweighing, AdversarialDebiasing, OptimPreproc\n",
     "time.sleep(20)\n",
     "\n",
     "from IPython.display import Markdown, display\n",
@@ -80,6 +80,9 @@
     "\n",
     "# Initialize ALG as None initially\n",
     "ALG = None\n",
+    "\n",
+    "# User-inputted algorithm\n",
+    "Algorithm = \"Reweighing\"\n",
     "\n",
     "# Initialize algorithm based on user input \n",
     "if Algorithm == \"Reweighing\":\n",
