--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -23,7 +23,7 @@
     "time.sleep(20)\n",
     "from aif360.metrics import Metric\n",
     "time.sleep(20)\n",
-    "from aif360.algorithms.preprocessing import Reweighing, AdversarialDebiasing, OptimPreproc\n",
+    "from aif360.algorithms.preprocessing import Reweighing\n",
     "time.sleep(20)\n",
     "\n",
     "from IPython.display import Markdown, display\n",
