--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -82,16 +82,16 @@
     "ALG = None\n",
     "\n",
     "# User-inputted algorithm\n",
-    "Reweighing = \"Reweighing\"\n",
+    "algorithm_choice = \"Reweighing\"\n",
     "\n",
     "# Initialize algorithm based on user input \n",
-    "if Reweighing == \"Reweighing\":\n",
+    "if algorithm_choice == \"Reweighing\":\n",
     "    ALG = initialize_reweighing(unprivileged_groups, privileged_groups)\n",
-    "elif Reweighing == \"AdversarialDebiasing\":\n",
+    "elif algorithm_choice == \"AdversarialDebiasing\":\n",
     "    ALG = initialize_adversarial_debiasing(unprivileged_groups, privileged_groups, \n",
     "                                           adversary_loss_weight=0.1, num_epochs=50, batch_size=128, \n",
     "                                           classifier_num_hidden_units=200, debias=True, sess=None)\n",
-    "elif Reweighing == \"OptimPreproc\":\n",
+    "elif algorithm_choice == \"OptimPreproc\":\n",
     "    ALG = initialize_optim_preproc(unprivileged_groups, privileged_groups, \n",
     "                                   optimizer='my_optimizer', optim_options={'option1': 'value1', 'option2': 'value2'}, \n",
     "                                   verbose=False)\n",
