test: demo ipynb

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -82,7 +82,7 @@
     "ALG = None\n",
     "\n",
     "# User-inputted algorithm\n",
-    "algorithm_choice = \"Reweighing\"\n",
+    "algorithm_choice = \"Algorithm\"\n",
     "\n",
     "# Initialize algorithm based on user input \n",
     "if algorithm_choice == \"Reweighing\":\n",
