--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -77,6 +77,8 @@
     "metric_orig_train = Metric(dataset_orig_train, \n",
     "                           unprivileged_groups=unprivileged_groups,\n",
     "                           privileged_groups=privileged_groups)\n",
+    "display(Markdown(\"#### Original training dataset\"))\n",
+    "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_orig_train.mean_difference())\n",
     "\n",
     "# Initialize ALG as None initially\n",
     "ALG = None\n",
