--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -17,7 +17,11 @@
     "import time\n",
     "\n",
     "# Add a sleep statement to wait for imports to be fully loaded\n",
-    "time.sleep(20)  # You can adjust the sleep duration based on your needs\n",
+    "time.sleep(20) \n",
+    "\n",
+    "# Create a TensorFlow session\n",
+    "import tensorflow as tf\n",
+    "sess = tf.Session()\n",
     "\n",
     "from aif360.datasets import Dataset\n",
     "time.sleep(20)\n",
@@ -36,9 +40,6 @@
     "\n",
     "# Function to initialize the AdversarialDebiasing algorithm\n",
     "def initialize_adversarial_debiasing(unprivileged_groups, privileged_groups, adversary_loss_weight, num_epochs, batch_size, classifier_num_hidden_units, debias, sess):\n",
-    "    if sess is None:\n",
-    "        raise ValueError(\"TensorFlow session 'sess' is required for AdversarialDebiasing.\")\n",
-    "    scope_name = \"my_scope\"\n",
     "    return AdversarialDebiasing(unprivileged_groups=unprivileged_groups,\n",
     "                                privileged_groups=privileged_groups,\n",
     "                                scope_name=scope_name,\n",
@@ -92,7 +93,7 @@
     "elif algorithm_choice == \"AdversarialDebiasing\":\n",
     "    ALG = initialize_adversarial_debiasing(unprivileged_groups, privileged_groups, \n",
     "                                           adversary_loss_weight=0.1, num_epochs=50, batch_size=128, \n",
-    "                                           classifier_num_hidden_units=200, debias=True, sess=None)\n",
+    "                                           classifier_num_hidden_units=200, debias=True, sess=sess)\n",
     "elif algorithm_choice == \"OptimPreproc\":\n",
     "    ALG = initialize_optim_preproc(unprivileged_groups, privileged_groups, \n",
     "                                   optimizer='my_optimizer', optim_options={'option1': 'value1', 'option2': 'value2'}, \n",
