test: import tensorflow.compat.v1 as tf tf.disable_v2_behavior() sess = tf.Session()

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -20,7 +20,8 @@
     "time.sleep(20) \n",
     "\n",
     "# Create a TensorFlow session\n",
-    "import tensorflow as tf\n",
+    "import tensorflow.compat.v1 as tf\n",
+    "tf.disable_v2_behavior()\n",
     "sess = tf.Session()\n",
     "\n",
     "from aif360.datasets import Dataset\n",
