fix: NameError: name 'scope_name' is not defined

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -41,6 +41,7 @@
     "\n",
     "# Function to initialize the AdversarialDebiasing algorithm\n",
     "def initialize_adversarial_debiasing(unprivileged_groups, privileged_groups, adversary_loss_weight, num_epochs, batch_size, classifier_num_hidden_units, debias, sess):\n",
+    "    scope_name = \"my_scope\"\n",
     "    return AdversarialDebiasing(unprivileged_groups=unprivileged_groups,\n",
     "                                privileged_groups=privileged_groups,\n",
     "                                scope_name=scope_name,\n",
