test: demo.ipynb

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -102,7 +102,7 @@
     "                                   verbose=False)\n",
     "\n",
     "# Fit and transform dataset\n",
-    "dataset_transf_train = ALG.predict(dataset_orig_train)\n",
+    "dataset_transf_train = ALG.fit_transform(dataset_orig_train)\n",
     "\n",
     "# Compute metric on transformed dataset\n",
     "metric_transf_train = Metric(dataset_transf_train, \n",
