--- a/examples/tutorial_bias_advertising.ipynb
+++ b/examples/tutorial_bias_advertising.ipynb
@@ -16,11 +16,17 @@
     "time.sleep(20)\n",
     "\n",
     "from aif360.datasets import StandardDataset\n",
+    "time.sleep(20)\n",
     "from aif360.metrics import ClassificationMetric, BinaryLabelDatasetMetric\n",
+    "time.sleep(20)\n",
     "from aif360.algorithms.postprocessing import RejectOptionClassification\n",
+    "time.sleep(20)\n",
     "from aif360.detectors.mdss.ScoringFunctions import Bernoulli\n",
+    "time.sleep(20)\n",
     "from aif360.detectors.mdss.MDSS import MDSS\n",
+    "time.sleep(20)\n",
     "from aif360.detectors.mdss.generator import get_random_subset\n",
+    "time.sleep(20)\n",
     "\n",
     "from IPython.display import Markdown, display\n",
     "\n",
