test: demo_calibrated_eqodds_postprocessing

--- a/examples/demo_calibrated_eqodds_postprocessing.ipynb
+++ b/examples/demo_calibrated_eqodds_postprocessing.ipynb
@@ -161,6 +161,33 @@
     "y_test_pred[~(y_test_pred_prob >= class_thresh)] = dataset_orig_test_pred.unfavorable_label\n",
     "dataset_orig_test_pred.labels = y_test_pred\n",
     "\n",
+    "cm_pred_train = ClassificationMetric(dataset_orig_train, dataset_orig_train_pred,\n",
+    "                             unprivileged_groups=unprivileged_groups,\n",
+    "                             privileged_groups=privileged_groups)\n",
+    "display(Markdown(\"#### Original-Predicted training dataset\"))\n",
+    "print(\"Difference in GFPR between unprivileged and privileged groups\")\n",
+    "print(cm_pred_train.difference(cm_pred_train.generalized_false_positive_rate))\n",
+    "print(\"Difference in GFNR between unprivileged and privileged groups\")\n",
+    "print(cm_pred_train.difference(cm_pred_train.generalized_false_negative_rate))\n",
+    "\n",
+    "cm_pred_valid = ClassificationMetric(dataset_orig_valid, dataset_orig_valid_pred,\n",
+    "                             unprivileged_groups=unprivileged_groups,\n",
+    "                             privileged_groups=privileged_groups)\n",
+    "display(Markdown(\"#### Original-Predicted validation dataset\"))\n",
+    "print(\"Difference in GFPR between unprivileged and privileged groups\")\n",
+    "print(cm_pred_valid.difference(cm_pred_valid.generalized_false_positive_rate))\n",
+    "print(\"Difference in GFNR between unprivileged and privileged groups\")\n",
+    "print(cm_pred_valid.difference(cm_pred_valid.generalized_false_negative_rate))\n",
+    "\n",
+    "cm_pred_test = ClassificationMetric(dataset_orig_test, dataset_orig_test_pred,\n",
+    "                             unprivileged_groups=unprivileged_groups,\n",
+    "                             privileged_groups=privileged_groups)\n",
+    "display(Markdown(\"#### Original-Predicted testing dataset\"))\n",
+    "print(\"Difference in GFPR between unprivileged and privileged groups\")\n",
+    "print(cm_pred_test.difference(cm_pred_test.generalized_false_positive_rate))\n",
+    "print(\"Difference in GFNR between unprivileged and privileged groups\")\n",
+    "print(cm_pred_test.difference(cm_pred_test.generalized_false_negative_rate))\n",
+    "\n",
     "# Odds equalizing post-processing algorithm\n",
     "from aif360.algorithms.postprocessing.calibrated_eq_odds_postprocessing import CalibratedEqOddsPostprocessing\n",
     "from tqdm import tqdm\n",
