test: demo ipynb

--- a/examples/demo_calibrated_eqodds_postprocessing.ipynb
+++ b/examples/demo_calibrated_eqodds_postprocessing.ipynb
@@ -113,8 +113,11 @@
     "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_orig_test.mean_difference())\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "time.sleep(20)\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "time.sleep(20)\n",
     "from sklearn.metrics import roc_curve\n",
+    "time.sleep(20)\n",
     "\n",
     "# Placeholder for predicted and transformed datasets\n",
     "dataset_orig_train_pred = dataset_orig_train.copy(deepcopy=True)\n",
@@ -190,7 +193,9 @@
     "\n",
     "# Odds equalizing post-processing algorithm\n",
     "from aif360.algorithms.postprocessing.calibrated_eq_odds_postprocessing import CalibratedEqOddsPostprocessing\n",
+    "print(cm_pred_test.difference(cm_pred_test.generalized_false_negative_rate))\n",
     "from tqdm import tqdm\n",
+    "print(cm_pred_test.difference(cm_pred_test.generalized_false_negative_rate))\n",
     "\n",
     "# Learn parameters to equalize odds and apply to create a new dataset\n",
     "cpp = CalibratedEqOddsPostprocessing(privileged_groups = privileged_groups,\n",
