--- a/examples/demo_reweighing_preproc.ipynb
+++ b/examples/demo_reweighing_preproc.ipynb
@@ -238,6 +238,77 @@
     "ax2.yaxis.set_tick_params(labelsize=14)\n",
     "ax2.grid(True)\n",
     "\n",
+    "scale_transf = StandardScaler()\n",
+    "X_train = scale_transf.fit_transform(dataset_transf_train.features)\n",
+    "y_train = dataset_transf_train.labels.ravel()\n",
+    "\n",
+    "lmod = LogisticRegression()\n",
+    "lmod.fit(X_train, y_train,\n",
+    "        sample_weight=dataset_transf_train.instance_weights)\n",
+    "y_train_pred = lmod.predict(X_train)\n",
+    "\n",
+    "dataset_transf_test_pred = dataset_orig_test.copy(deepcopy=True)\n",
+    "X_test = scale_transf.fit_transform(dataset_transf_test_pred.features)\n",
+    "y_test = dataset_transf_test_pred.labels\n",
+    "dataset_transf_test_pred.scores = lmod.predict_proba(X_test)[:,pos_ind].reshape(-1,1)\n",
+    "\n",
+    "display(Markdown(\"#### Predictions from transformed testing data\"))\n",
+    "bal_acc_arr_transf = []\n",
+    "disp_imp_arr_transf = []\n",
+    "avg_odds_diff_arr_transf = []\n",
+    "\n",
+    "print(\"Classification threshold used = %.4f\" % best_class_thresh)\n",
+    "for thresh in tqdm(class_thresh_arr):\n",
+    "    \n",
+    "    if thresh == best_class_thresh:\n",
+    "        disp = True\n",
+    "    else:\n",
+    "        disp = False\n",
+    "    \n",
+    "    fav_inds = dataset_transf_test_pred.scores > thresh\n",
+    "    dataset_transf_test_pred.labels[fav_inds] = dataset_transf_test_pred.favorable_label\n",
+    "    dataset_transf_test_pred.labels[~fav_inds] = dataset_transf_test_pred.unfavorable_label\n",
+    "    \n",
+    "    metric_test_aft = compute_metrics(dataset_orig_test, dataset_transf_test_pred, \n",
+    "                                      unprivileged_groups, privileged_groups,\n",
+    "                                      disp = disp)\n",
+    "\n",
+    "    bal_acc_arr_transf.append(metric_test_aft[\"Balanced accuracy\"])\n",
+    "    avg_odds_diff_arr_transf.append(metric_test_aft[\"Average odds difference\"])\n",
+    "    disp_imp_arr_transf.append(metric_test_aft[\"Disparate impact\"])\n",
+    "    \n",
+    "fig, ax1 = plt.subplots(figsize=(10,7))\n",
+    "ax1.plot(class_thresh_arr, bal_acc_arr_transf)\n",
+    "ax1.set_xlabel('Classification Thresholds', fontsize=16, fontweight='bold')\n",
+    "ax1.set_ylabel('Balanced Accuracy', color='b', fontsize=16, fontweight='bold')\n",
+    "ax1.xaxis.set_tick_params(labelsize=14)\n",
+    "ax1.yaxis.set_tick_params(labelsize=14)\n",
+    "\n",
+    "\n",
+    "ax2 = ax1.twinx()\n",
+    "ax2.plot(class_thresh_arr, np.abs(1.0-np.array(disp_imp_arr_transf)), color='r')\n",
+    "ax2.set_ylabel('abs(1-disparate impact)', color='r', fontsize=16, fontweight='bold')\n",
+    "ax2.axvline(best_class_thresh, color='k', linestyle=':')\n",
+    "ax2.yaxis.set_tick_params(labelsize=14)\n",
+    "ax2.grid(True)\n",
+    "\n",
+    "fig, ax1 = plt.subplots(figsize=(10,7))\n",
+    "ax1.plot(class_thresh_arr, bal_acc_arr_transf)\n",
+    "ax1.set_xlabel('Classification Thresholds', fontsize=16, fontweight='bold')\n",
+    "ax1.set_ylabel('Balanced Accuracy', color='b', fontsize=16, fontweight='bold')\n",
+    "ax1.xaxis.set_tick_params(labelsize=14)\n",
+    "ax1.yaxis.set_tick_params(labelsize=14)\n",
+    "\n",
+    "\n",
+    "ax2 = ax1.twinx()\n",
+    "ax2.plot(class_thresh_arr, avg_odds_diff_arr_transf, color='r')\n",
+    "ax2.set_ylabel('avg. odds diff.', color='r', fontsize=16, fontweight='bold')\n",
+    "ax2.axvline(best_class_thresh, color='k', linestyle=':')\n",
+    "ax2.yaxis.set_tick_params(labelsize=14)\n",
+    "ax2.grid(True)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
