docs: added new fairness metrics in bias mitigation

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -3,11 +3,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f294200",
+   "id": "27d3cfb1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load all necessary packages\n",
     "import sys\n",
     "sys.path.insert(1, \"../\")  \n",
     "\n",
@@ -17,102 +16,116 @@
     "import time\n",
     "\n",
     "# Add a sleep statement to wait for imports to be fully loaded\n",
-    "time.sleep(20) \n",
+    "time.sleep(20)  # You can adjust the sleep duration based on your needs\n",
     "\n",
-    "# Create a TensorFlow session\n",
-    "import tensorflow.compat.v1 as tf\n",
-    "tf.disable_v2_behavior()\n",
-    "sess = tf.Session()\n",
-    "\n",
-    "from aif360.datasets import Dataset\n",
+    "from aif360.datasets import GermanDataset\n",
     "time.sleep(20)\n",
-    "from aif360.metrics import Metric\n",
+    "from aif360.metrics import BinaryLabelDatasetMetric, ClassificationMetric\n",
     "time.sleep(20)\n",
-    "from aif360.algorithms.Path import Algorithm\n",
+    "from aif360.algorithms.preprocessing import Reweighing\n",
     "time.sleep(20)\n",
     "\n",
     "from IPython.display import Markdown, display\n",
     "time.sleep(20)\n",
     "\n",
-    "# Function to initialize the Reweighing algorithm\n",
-    "def initialize_reweighing(unprivileged_groups, privileged_groups):\n",
-    "    return Reweighing(unprivileged_groups=unprivileged_groups,\n",
-    "                      privileged_groups=privileged_groups)\n",
+    "# Import matplotlib for visualization\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Function to initialize the AdversarialDebiasing algorithm\n",
-    "def initialize_adversarial_debiasing(unprivileged_groups, privileged_groups, adversary_loss_weight, num_epochs, batch_size, classifier_num_hidden_units, debias, sess):\n",
-    "    scope_name = \"my_scope\"\n",
-    "    return AdversarialDebiasing(unprivileged_groups=unprivileged_groups,\n",
-    "                                privileged_groups=privileged_groups,\n",
-    "                                scope_name=scope_name,\n",
-    "                                sess=sess,\n",
-    "                                seed=None,\n",
-    "                                adversary_loss_weight=adversary_loss_weight,\n",
-    "                                num_epochs=num_epochs,\n",
-    "                                batch_size=batch_size,\n",
-    "                                classifier_num_hidden_units=classifier_num_hidden_units,\n",
-    "                                debias=debias)\n",
-    "\n",
-    "# Function to initialize the OptimPreproc algorithm\n",
-    "def initialize_optim_preproc(unprivileged_groups, privileged_groups, optimizer, optim_options, verbose):\n",
-    "    return OptimPreproc(optimizer=optimizer,\n",
-    "                        optim_options=optim_options,\n",
-    "                        unprivileged_groups=unprivileged_groups,\n",
-    "                        privileged_groups=privileged_groups,\n",
-    "                        verbose=verbose,\n",
-    "                        seed=None)\n",
-    "\n",
-    "# Load dataset\n",
-    "dataset_orig = Dataset(\n",
-    "    protected_attribute_names=['age'],\n",
-    "    privileged_classes=[lambda x: x >= 25],\n",
-    "    features_to_drop=['personal_status', 'sex']\n",
+    "dataset_orig = GermanDataset(\n",
+    "    protected_attribute_names=['age'],           # this dataset also contains protected\n",
+    "                                                 # attribute for \"sex\" which we do not\n",
+    "                                                 # consider in this evaluation\n",
+    "    privileged_classes=[lambda x: x >= 25],      # age >=25 is considered privileged\n",
+    "    features_to_drop=['personal_status', 'sex'] # ignore sex-related attributes\n",
     ")\n",
     "\n",
-    "# Split dataset\n",
     "dataset_orig_train, dataset_orig_test = dataset_orig.split([0.7], shuffle=True)\n",
     "\n",
-    "# Define privileged and unprivileged groups\n",
     "privileged_groups = [{'age': 1}]\n",
     "unprivileged_groups = [{'age': 0}]\n",
     "\n",
-    "# Define metric\n",
-    "metric_orig_train = Metric(dataset_orig_train, \n",
-    "                           unprivileged_groups=unprivileged_groups,\n",
-    "                           privileged_groups=privileged_groups)\n",
+    "metric_orig_train = BinaryLabelDatasetMetric(dataset_orig_train, \n",
+    "                                             unprivileged_groups=unprivileged_groups,\n",
+    "                                             privileged_groups=privileged_groups)\n",
     "display(Markdown(\"#### Original training dataset\"))\n",
     "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_orig_train.mean_difference())\n",
     "\n",
-    "# Initialize ALG as None initially\n",
-    "ALG = None\n",
+    "RW = Reweighing(unprivileged_groups=unprivileged_groups,\n",
+    "                privileged_groups=privileged_groups)\n",
+    "dataset_transf_train = RW.fit_transform(dataset_orig_train)\n",
     "\n",
-    "# User-inputted algorithm\n",
-    "algorithm_choice = \"Algorithm\"\n",
-    "\n",
-    "# Initialize algorithm based on user input \n",
-    "if algorithm_choice == \"Reweighing\":\n",
-    "    ALG = initialize_reweighing(unprivileged_groups, privileged_groups)\n",
-    "elif algorithm_choice == \"AdversarialDebiasing\":\n",
-    "    ALG = initialize_adversarial_debiasing(unprivileged_groups, privileged_groups, \n",
-    "                                           adversary_loss_weight=0.1, num_epochs=50, batch_size=128, \n",
-    "                                           classifier_num_hidden_units=200, debias=True, sess=sess)\n",
-    "elif algorithm_choice == \"OptimPreproc\":\n",
-    "    ALG = initialize_optim_preproc(unprivileged_groups, privileged_groups, \n",
-    "                                   optimizer='my_optimizer', optim_options={'option1': 'value1', 'option2': 'value2'}, \n",
-    "                                   verbose=False)\n",
-    "\n",
-    "# Fit and transform dataset\n",
-    "dataset_transf_train = ALG.fit_transform(dataset_orig_train)\n",
-    "\n",
-    "# Compute metric on transformed dataset\n",
-    "metric_transf_train = Metric(dataset_transf_train, \n",
-    "                             unprivileged_groups=unprivileged_groups,\n",
-    "                             privileged_groups=privileged_groups)\n",
-    "\n",
-    "# Display results\n",
+    "metric_transf_train = BinaryLabelDatasetMetric(dataset_transf_train, \n",
+    "                                               unprivileged_groups=unprivileged_groups,\n",
+    "                                               privileged_groups=privileged_groups)\n",
     "display(Markdown(\"#### Transformed training dataset\"))\n",
-    "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_transf_train.mean_difference())\n"
+    "print(\"Difference in mean outcomes between unprivileged and privileged groups = %f\" % metric_transf_train.mean_difference())\n",
+    "\n",
+    "# Additional fairness metrics\n",
+    "display(Markdown(\"#### Fairness metrics on transformed training dataset\"))\n",
+    "\n",
+    "# Disparate Impact\n",
+    "disparate_impact = metric_transf_train.disparate_impact()\n",
+    "print(\"Disparate Impact (favorable label):\", disparate_impact)\n",
+    "\n",
+    "# Statistical Parity Difference\n",
+    "statistical_parity_difference = metric_transf_train.statistical_parity_difference()\n",
+    "print(\"Statistical Parity Difference (favorable label):\", statistical_parity_difference)\n",
+    "\n",
+    "# Equal Opportunity Difference\n",
+    "equal_opportunity_difference = metric_transf_train.equal_opportunity_difference()\n",
+    "print(\"Equal Opportunity Difference:\", equal_opportunity_difference)\n",
+    "\n",
+    "# Equalized Odds Difference\n",
+    "equalized_odds_difference = metric_transf_train.equalized_odds_difference()\n",
+    "print(\"Equalized Odds Difference:\", equalized_odds_difference)\n",
+    "\n",
+    "# Average Odds Difference\n",
+    "average_odds_difference = metric_transf_train.average_odds_difference()\n",
+    "print(\"Average Odds Difference:\", average_odds_difference)\n",
+    "\n",
+    "# Theil Index\n",
+    "theil_index = metric_transf_train.theil_index()\n",
+    "print(\"Theil Index:\", theil_index)\n",
+    "\n",
+    "# Conditional Demographic Disparity\n",
+    "false_positive_ratio_difference = metric_transf_train.false_positive_ratio_difference()\n",
+    "print(\"Conditional Demographic Disparity (False Positive Ratio Difference):\", false_positive_ratio_difference)\n",
+    "\n",
+    "# Predictive Parity\n",
+    "predictive_parity_difference = metric_transf_train.predictive_parity_difference()\n",
+    "print(\"Predictive Parity Difference:\", predictive_parity_difference)\n",
+    "\n",
+    "# Define function to plot fairness metrics\n",
+    "def plot_fairness_metrics(disparate_impact, statistical_parity_difference, equal_opportunity_difference, \n",
+    "                          equalized_odds_difference, average_odds_difference, theil_index, \n",
+    "                          false_positive_ratio_difference, predictive_parity_difference):\n",
+    "    labels = ['Disparate Impact', 'Statistical Parity Difference', 'Equal Opportunity Difference', \n",
+    "              'Equalized Odds Difference', 'Average Odds Difference', 'Theil Index', \n",
+    "              'False Positive Ratio Difference', 'Predictive Parity Difference']\n",
+    "    metrics = [disparate_impact, statistical_parity_difference, equal_opportunity_difference, \n",
+    "               equalized_odds_difference, average_odds_difference, theil_index, \n",
+    "               false_positive_ratio_difference, predictive_parity_difference]\n",
+    "\n",
+    "    plt.figure(figsize=(12, 8))\n",
+    "    plt.barh(labels, metrics, color='skyblue')\n",
+    "    plt.title('Fairness Metrics')\n",
+    "    plt.xlabel('Value')\n",
+    "    plt.xlim(0, max(metrics) * 1.2)  # Adjust xlim for better visualization\n",
+    "    plt.show()\n",
+    "\n",
+    "# Plot fairness metrics\n",
+    "plot_fairness_metrics(disparate_impact, statistical_parity_difference, equal_opportunity_difference, \n",
+    "                      equalized_odds_difference, average_odds_difference, theil_index, \n",
+    "                      false_positive_ratio_difference, predictive_parity_difference)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c234e745",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
