test: new explainers

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -71,28 +71,34 @@
     "statistical_parity_difference = metric_transf_train.statistical_parity_difference()\n",
     "print(\"Statistical Parity Difference (favorable label):\", statistical_parity_difference)\n",
     "\n",
+    "# Classification Metrics\n",
+    "classified_metric_transf_train = ClassificationMetric(dataset_orig_train, \n",
+    "                                                      dataset_transf_train,\n",
+    "                                                      unprivileged_groups=unprivileged_groups,\n",
+    "                                                      privileged_groups=privileged_groups)\n",
+    "\n",
     "# Equal Opportunity Difference\n",
-    "equal_opportunity_difference = metric_transf_train.equal_opportunity_difference()\n",
+    "equal_opportunity_difference = classified_metric_transf_train.equal_opportunity_difference()\n",
     "print(\"Equal Opportunity Difference:\", equal_opportunity_difference)\n",
     "\n",
     "# Equalized Odds Difference\n",
-    "equalized_odds_difference = metric_transf_train.equalized_odds_difference()\n",
+    "equalized_odds_difference = classified_metric_transf_train.equalized_odds_difference()\n",
     "print(\"Equalized Odds Difference:\", equalized_odds_difference)\n",
     "\n",
     "# Average Odds Difference\n",
-    "average_odds_difference = metric_transf_train.average_odds_difference()\n",
+    "average_odds_difference = classified_metric_transf_train.average_odds_difference()\n",
     "print(\"Average Odds Difference:\", average_odds_difference)\n",
     "\n",
     "# Theil Index\n",
-    "theil_index = metric_transf_train.theil_index()\n",
+    "theil_index = classified_metric_transf_train.theil_index()\n",
     "print(\"Theil Index:\", theil_index)\n",
     "\n",
     "# Conditional Demographic Disparity\n",
-    "false_positive_ratio_difference = metric_transf_train.false_positive_ratio_difference()\n",
+    "false_positive_ratio_difference = classified_metric_transf_train.false_positive_ratio_difference()\n",
     "print(\"Conditional Demographic Disparity (False Positive Ratio Difference):\", false_positive_ratio_difference)\n",
     "\n",
     "# Predictive Parity\n",
-    "predictive_parity_difference = metric_transf_train.predictive_parity_difference()\n",
+    "predictive_parity_difference = classified_metric_transf_train.predictive_parity_difference()\n",
     "print(\"Predictive Parity Difference:\", predictive_parity_difference)\n",
     "\n",
     "# Define function to plot fairness metrics\n",
@@ -116,7 +122,8 @@
     "# Plot fairness metrics\n",
     "plot_fairness_metrics(disparate_impact, statistical_parity_difference, equal_opportunity_difference, \n",
     "                      equalized_odds_difference, average_odds_difference, theil_index, \n",
-    "                      false_positive_ratio_difference, predictive_parity_difference)\n"
+    "                      false_positive_ratio_difference, predictive_parity_difference)\n",
+    "\n"
    ]
   },
   {
