test: modify notebook to dataset_orig_train_pred undergoes the same preprocessing steps as dataset_transf_train

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -71,8 +71,11 @@
     "statistical_parity_difference = metric_transf_train.statistical_parity_difference()\n",
     "print(\"Statistical Parity Difference (favorable label):\", statistical_parity_difference)\n",
     "\n",
+    "# Create a new dataset by applying the same preprocessing steps as the transformed dataset\n",
+    "dataset_orig_train_pred = RW.transform(dataset_orig_train)\n",
+    "\n",
     "# Classification Metrics\n",
-    "classified_metric_transf_train = ClassificationMetric(dataset_orig_train, \n",
+    "classified_metric_transf_train = ClassificationMetric(dataset_orig_train_pred, \n",
     "                                                      dataset_transf_train,\n",
     "                                                      unprivileged_groups=unprivileged_groups,\n",
     "                                                      privileged_groups=privileged_groups)\n",
@@ -123,6 +126,7 @@
     "plot_fairness_metrics(disparate_impact, statistical_parity_difference, equal_opportunity_difference, \n",
     "                      equalized_odds_difference, average_odds_difference, theil_index, \n",
     "                      false_positive_ratio_difference, predictive_parity_difference)\n",
+    "\n",
     "\n"
    ]
   },
