test: test false_positive_ratio_difference()

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -96,10 +96,6 @@
     "theil_index = classified_metric_transf_train.theil_index()\n",
     "print(\"Theil Index:\", theil_index)\n",
     "\n",
-    "# Conditional Demographic Disparity\n",
-    "false_positive_ratio_difference = classified_metric_transf_train.false_positive_ratio_difference()\n",
-    "print(\"Conditional Demographic Disparity (False Positive Ratio Difference):\", false_positive_ratio_difference)\n",
-    "\n",
     "# Predictive Parity\n",
     "predictive_parity_difference = classified_metric_transf_train.predictive_parity_difference()\n",
     "print(\"Predictive Parity Difference:\", predictive_parity_difference)\n",
@@ -107,13 +103,13 @@
     "# Define function to plot fairness metrics\n",
     "def plot_fairness_metrics(disparate_impact, statistical_parity_difference, equal_opportunity_difference, \n",
     "                          equalized_odds_difference, average_odds_difference, theil_index, \n",
-    "                          false_positive_ratio_difference, predictive_parity_difference):\n",
+    "                          predictive_parity_difference):\n",
     "    labels = ['Disparate Impact', 'Statistical Parity Difference', 'Equal Opportunity Difference', \n",
     "              'Equalized Odds Difference', 'Average Odds Difference', 'Theil Index', \n",
-    "              'False Positive Ratio Difference', 'Predictive Parity Difference']\n",
+    "              'Predictive Parity Difference']\n",
     "    metrics = [disparate_impact, statistical_parity_difference, equal_opportunity_difference, \n",
     "               equalized_odds_difference, average_odds_difference, theil_index, \n",
-    "               false_positive_ratio_difference, predictive_parity_difference]\n",
+    "               predictive_parity_difference]\n",
     "\n",
     "    plt.figure(figsize=(12, 8))\n",
     "    plt.barh(labels, metrics, color='skyblue')\n",
@@ -125,18 +121,8 @@
     "# Plot fairness metrics\n",
     "plot_fairness_metrics(disparate_impact, statistical_parity_difference, equal_opportunity_difference, \n",
     "                      equalized_odds_difference, average_odds_difference, theil_index, \n",
-    "                      false_positive_ratio_difference, predictive_parity_difference)\n",
-    "\n",
-    "\n"
+    "                      predictive_parity_difference)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c234e745",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
