test: demo notebook

--- a/examples/ethaiaudithubDemo.ipynb
+++ b/examples/ethaiaudithubDemo.ipynb
@@ -96,20 +96,13 @@
     "theil_index = classified_metric_transf_train.theil_index()\n",
     "print(\"Theil Index:\", theil_index)\n",
     "\n",
-    "# Predictive Parity\n",
-    "predictive_parity_difference = classified_metric_transf_train.predictive_parity_difference()\n",
-    "print(\"Predictive Parity Difference:\", predictive_parity_difference)\n",
-    "\n",
     "# Define function to plot fairness metrics\n",
     "def plot_fairness_metrics(disparate_impact, statistical_parity_difference, equal_opportunity_difference, \n",
-    "                          equalized_odds_difference, average_odds_difference, theil_index, \n",
-    "                          predictive_parity_difference):\n",
+    "                          equalized_odds_difference, average_odds_difference, theil_index):\n",
     "    labels = ['Disparate Impact', 'Statistical Parity Difference', 'Equal Opportunity Difference', \n",
-    "              'Equalized Odds Difference', 'Average Odds Difference', 'Theil Index', \n",
-    "              'Predictive Parity Difference']\n",
+    "              'Equalized Odds Difference', 'Average Odds Difference', 'Theil Index']\n",
     "    metrics = [disparate_impact, statistical_parity_difference, equal_opportunity_difference, \n",
-    "               equalized_odds_difference, average_odds_difference, theil_index, \n",
-    "               predictive_parity_difference]\n",
+    "               equalized_odds_difference, average_odds_difference, theil_index]\n",
     "\n",
     "    plt.figure(figsize=(12, 8))\n",
     "    plt.barh(labels, metrics, color='skyblue')\n",
@@ -120,8 +113,7 @@
     "\n",
     "# Plot fairness metrics\n",
     "plot_fairness_metrics(disparate_impact, statistical_parity_difference, equal_opportunity_difference, \n",
-    "                      equalized_odds_difference, average_odds_difference, theil_index, \n",
-    "                      predictive_parity_difference)\n"
+    "                      equalized_odds_difference, average_odds_difference, theil_index)\n"
    ]
   }
  ],
