add: new metrics in test notebook

--- a/examples/ethaiaudithubTest.ipynb
+++ b/examples/ethaiaudithubTest.ipynb
@@ -72,7 +72,7 @@
     "print(\"Statistical Parity Difference (favorable label):\", statistical_parity_difference)\n",
     "\n",
     "# Create a new dataset by applying the same preprocessing steps as the transformed dataset\n",
-    "dataset_orig_train_pred = RW.transform(dataset_orig_train)\n",
+    "dataset_orig_train_pred = ALG.transform(dataset_orig_train)\n",
     "\n",
     "# Classification Metrics\n",
     "classified_metric_transf_train = Metric2(dataset_orig_train_pred, \n",
