update: extended notebook to compatible with updated workflow

--- a/examples/ethaiaudithubExtended.ipynb
+++ b/examples/ethaiaudithubExtended.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "from aif360.datasets import Dataset\n",
     "time.sleep(20)\n",
-    "from aif360.metrics import Metric\n",
+    "from aif360.metrics import Metric1\n",
     "time.sleep(20)\n",
     "from aif360.algorithms.Path import Algorithm\n",
     "time.sleep(20)\n",
@@ -42,7 +42,7 @@
     "privileged_groups = [{'age': 1}]\n",
     "unprivileged_groups = [{'age': 0}]\n",
     "\n",
-    "metric_orig_train = Metric(dataset_orig_train, \n",
+    "metric_orig_train = Metric1(dataset_orig_train, \n",
     "                                             unprivileged_groups=unprivileged_groups,\n",
     "                                             privileged_groups=privileged_groups)\n",
     "display(Markdown(\"#### Original training dataset\"))\n",
@@ -52,7 +52,7 @@
     "                privileged_groups=privileged_groups)\n",
     "dataset_transf_train = ALG.fit_transform(dataset_orig_train)\n",
     "\n",
-    "metric_transf_train = Metric(dataset_transf_train, \n",
+    "metric_transf_train = Metric1(dataset_transf_train, \n",
     "                                               unprivileged_groups=unprivileged_groups,\n",
     "                                               privileged_groups=privileged_groups)\n",
     "display(Markdown(\"#### Transformed training dataset\"))\n",
